--- a/index.html
+++ b/index.html
@@ -1,47 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url('./images/IMG_1750.jpg');">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Photography</title>
-    <link rel="icon" href="./icons/favicon.svg"/>
+    <title>Github</title>
     <link rel="stylesheet" href="stylesheet.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="scripts.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-
     <body>
-        <header>
-        <section>
-        <a href="index.html"><img src="./icons/aperture.svg" alt="shutter"></a>
-        <h1><a href="index.html">Photography</a></h1>
-        </section>
-        <nav>
-            <ul class="navbar">
-                <li id="current"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <section>
-        <a href="https://facebook.com" target="_blank"><img src="./icons/facebook.svg" alt="facebook"></a>
-        <a href="https://instagram.com" target="_blank"><img src="./icons/instagram.svg" alt="instagram"></a>
-        <a href="https://twitter.com" target="_blank"><img src="./icons/twitter.svg" alt="twitter"></a>
-        </section>
-        </header>
-
-        <main>
-        <section class="mainpage">
-        <section>
-            <h2>David Wilson</h2>
-            <p>CS Student/ Photographer</p>
-            <button id="gallery_button" onclick="location.href='gallery.html'">Gallery</button>
-        </section>
-        </section>
-        </main>
-
-        <footer>
-            <p><a href="./beescrpt.txt">&copy;</a>2021 David Wilson. All rights reserved. Icons sourced from <a href="https://github.com/feathericons/feather/tree/master/icons" target="_blank">GitHub</a></p>
-            <p>Click <a href="./shipping.html">here</a> to view shipping information.</p>
-        </footer>
     </body>
 </html>
