--- a/cache.html
+++ b/cache.html
@@ -18,7 +18,7 @@
     <h1>Welcome to the submission page </h1>
     <div id="greeting">
         <p>Use the box below the check your answer and get the next coordinates.</p>
-        <p>Your answer should be all lowercase!</p>
+        <p>Your answer should be all uppercase!</p>
     </div>
     <div id="result" class="mt-4"></div>
     <form id="attributeForm" class="form-inline">
